--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -19,6 +19,7 @@ theme-override: assets/css/PITCHME.css
 #
 logo : assets/img/logo.png
 logo-postion : top-left
+highlight : monokai
 
 #
 # Layout Setting
