--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -20,6 +20,7 @@ theme-override: assets/css/PITCHME.css
 logo : assets/img/logo.png
 logo-postion : top-left
 highlight : monokai
+code-line-numbers : true
 
 #
 # Layout Setting
